experimental/parser/testdata/parser/syntax/invalid.proto.stderr.txt
error: unrecognized `syntax` declaration value
  --> testdata/parser/syntax/invalid.proto:15:10
   |
15 | syntax = invalid;
   |          ^^^^^^^
   = note: treating the file as "proto2" instead
   = help: permitted values: "proto2", "proto3"

encountered 1 error
